--- a/index.html
+++ b/index.html
@@ -7,27 +7,23 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
     <div class="wrapper">
         <div class="app-details">
             <h1 class="app-title">Zoko Calculator</h1>
         </div>
-        <label for="amount">Amount:</label>
+        <label for="amount">Amount (USD):</label>
         <input type="number" id="amount" value="1" />
-        <div class="dropdowns">
-            <select id="from-currency-select">
-                <option value="USD">USD</option>
-                <option value="PHP">PHP</option>
-            </select>
-            <select id="to-currency-select">
-                <option value="PHP">PHP</option>
-                <option value="USD">USD</option>
-            </select>
-        </div>
+
         <label for="rate">Conversion Rate (1 USD to PHP):</label>
         <input type="number" id="rate" value="51.24" />
+
+        <div class="conversion-info">Converting from <strong>USD</strong> to <strong>PHP</strong></div>
+
         <button id="convert-button">Convert</button>
         <p id="result"></p>
     </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
